objects/Org_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>lmsa org settings</description>
    <fields>
        <fullName>FaciityChecklist_Fieldsets__c</fullName>
        <description>Custom field for facility checklist object, Contains name and order of fields that will be used on creation of facility checklist page.</description>
        <label>FaciityChecklist Fieldsets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_Tip_Email_Template_Id__c</fullName>
        <description>Email template to be used on management tip list view</description>
        <label>Management Tip Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Tip_List_View_Id__c</fullName>
        <description>Record Type id for record type &apos;Management&apos;, used on management tip page</description>
        <label>Management Tip Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Evaluation_Email_Template_Id__c</fullName>
        <description>Template id for program evaluation</description>
        <label>Program Evaluation Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purina_Logo_URL__c</fullName>
        <description>URL for purina logo that is used in email templates</description>
        <label>Purina Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Settings</label>
</CustomObject>